--- a/app/scripts/venues/templates/venue_availability.hbs
+++ b/app/scripts/venues/templates/venue_availability.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
 
-    <h1 class="nm-page-heading">Venues</h1>
+    <h1>Venues</h1>
     <hr>
 
     <!-- Nav tabs -->
@@ -14,124 +14,131 @@
     <p>Search for available venues by specifying a day and time range.</p>
     <hr>
 
-    <div class="row">
-      <div class="col-md-4">
-        <div class="form-group">
-          <label class="control-label" for="venue">Day:</label>
-          <select type="text" class="form-control js-nm-venue-time-day-input">
-            <option value="Monday">Monday</option>
-            <option value="Tuesday">Tuesday</option>
-            <option value="Wednesday">Wednesday</option>
-            <option value="Thursday">Thursday</option>
-            <option value="Friday">Friday</option>
-          </select>
+    <div class="alert alert-warning">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label class="control-label" for="venue">Day:</label>
+            <select type="text" class="form-control js-nm-venue-time-day-input">
+              <option value="Monday">Monday</option>
+              <option value="Tuesday">Tuesday</option>
+              <option value="Wednesday">Wednesday</option>
+              <option value="Thursday">Thursday</option>
+              <option value="Friday">Friday</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label class="control-label" for="venue">Start Time:</label>
+            <select type="text" class="form-control js-nm-venue-time-start-input">
+              <option value="0800">0800</option>
+              <option value="0830">0830</option>
+              <option value="0900">0900</option>
+              <option value="0930">0930</option>
+              <option value="1000">1000</option>
+              <option value="1030">1030</option>
+              <option value="1100">1100</option>
+              <option value="1130">1130</option>
+              <option value="1200">1200</option>
+              <option value="1230">1230</option>
+              <option value="1300">1300</option>
+              <option value="1330">1330</option>
+              <option value="1400">1400</option>
+              <option value="1430">1430</option>
+              <option value="1500">1500</option>
+              <option value="1530">1530</option>
+              <option value="1600">1600</option>
+              <option value="1630">1630</option>
+              <option value="1700">1700</option>
+              <option value="1730">1730</option>
+              <option value="1800">1800</option>
+              <option value="1830">1830</option>
+              <option value="1900">1900</option>
+              <option value="1930">1930</option>
+              <option value="2000">2000</option>
+              <option value="2030">2030</option>
+              <option value="2100">2100</option>
+              <option value="2130">2130</option>
+              <option value="2200">2200</option>
+              <option value="2230">2230</option>
+              <option value="2300">2300</option>
+              <option value="2330">2330</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label class="control-label" for="venue">End Time:</label>
+            <select type="text" class="form-control js-nm-venue-time-end-input">
+              <option value="0800">0800</option>
+              <option value="0830">0830</option>
+              <option value="0900" selected>0900</option>
+              <option value="0930">0930</option>
+              <option value="1000">1000</option>
+              <option value="1030">1030</option>
+              <option value="1100">1100</option>
+              <option value="1130">1130</option>
+              <option value="1200">1200</option>
+              <option value="1230">1230</option>
+              <option value="1300">1300</option>
+              <option value="1330">1330</option>
+              <option value="1400">1400</option>
+              <option value="1430">1430</option>
+              <option value="1500">1500</option>
+              <option value="1530">1530</option>
+              <option value="1600">1600</option>
+              <option value="1630">1630</option>
+              <option value="1700">1700</option>
+              <option value="1730">1730</option>
+              <option value="1800">1800</option>
+              <option value="1830">1830</option>
+              <option value="1900">1900</option>
+              <option value="1930">1930</option>
+              <option value="2000">2000</option>
+              <option value="2030">2030</option>
+              <option value="2100">2100</option>
+              <option value="2130">2130</option>
+              <option value="2200">2200</option>
+              <option value="2230">2230</option>
+              <option value="2300">2300</option>
+              <option value="2330">2330</option>
+            </select>
+          </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="form-group">
-          <label class="control-label" for="venue">Start Time:</label>
-          <select type="text" class="form-control js-nm-venue-time-start-input">
-            <option value="0800">0800</option>
-            <option value="0830">0830</option>
-            <option value="0900">0900</option>
-            <option value="0930">0930</option>
-            <option value="1000">1000</option>
-            <option value="1030">1030</option>
-            <option value="1100">1100</option>
-            <option value="1130">1130</option>
-            <option value="1200">1200</option>
-            <option value="1230">1230</option>
-            <option value="1300">1300</option>
-            <option value="1330">1330</option>
-            <option value="1400">1400</option>
-            <option value="1430">1430</option>
-            <option value="1500">1500</option>
-            <option value="1530">1530</option>
-            <option value="1600">1600</option>
-            <option value="1630">1630</option>
-            <option value="1700">1700</option>
-            <option value="1730">1730</option>
-            <option value="1800">1800</option>
-            <option value="1830">1830</option>
-            <option value="1900">1900</option>
-            <option value="1930">1930</option>
-            <option value="2000">2000</option>
-            <option value="2030">2030</option>
-            <option value="2100">2100</option>
-            <option value="2130">2130</option>
-            <option value="2200">2200</option>
-            <option value="2230">2230</option>
-            <option value="2300">2300</option>
-            <option value="2330">2330</option>
-          </select>
+      <div class="row">
+        <div class="col-md-12">
+          <button type="submit" class="js-nm-available-venue-search btn btn-primary">Search</button>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="form-group">
-          <label class="control-label" for="venue">End Time:</label>
-          <select type="text" class="form-control js-nm-venue-time-end-input">
-            <option value="0800">0800</option>
-            <option value="0830">0830</option>
-            <option value="0900" selected>0900</option>
-            <option value="0930">0930</option>
-            <option value="1000">1000</option>
-            <option value="1030">1030</option>
-            <option value="1100">1100</option>
-            <option value="1130">1130</option>
-            <option value="1200">1200</option>
-            <option value="1230">1230</option>
-            <option value="1300">1300</option>
-            <option value="1330">1330</option>
-            <option value="1400">1400</option>
-            <option value="1430">1430</option>
-            <option value="1500">1500</option>
-            <option value="1530">1530</option>
-            <option value="1600">1600</option>
-            <option value="1630">1630</option>
-            <option value="1700">1700</option>
-            <option value="1730">1730</option>
-            <option value="1800">1800</option>
-            <option value="1830">1830</option>
-            <option value="1900">1900</option>
-            <option value="1930">1930</option>
-            <option value="2000">2000</option>
-            <option value="2030">2030</option>
-            <option value="2100">2100</option>
-            <option value="2130">2130</option>
-            <option value="2200">2200</option>
-            <option value="2230">2230</option>
-            <option value="2300">2300</option>
-            <option value="2330">2330</option>
-          </select>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <button type="submit" class="js-nm-available-venue-search btn btn-primary">Search</button>
       </div>
     </div>
     <hr>
 
-    <div>
-      {{#if availableVenues}}
-        <p>The following venues do not have any usual classes on <strong>{{venueDay}}</strong> from <strong>{{venueStartTime}}</strong> to <strong>{{venueEndTime}}</strong>:</p>
-      {{/if}}
-      {{#each availableVenues}}
-        <div class="row">
-          <div class="col-md-1">
-            <strong>{{this.letter}}</strong>
-          </div>
-          <div class="col-md-11">
-            {{#each this.venues}}
-              <div class="nm-venue-availability-items">
-                <a href="/venues/{{this}}">{{this}}</a>
-              </div>
-            {{/each}}
-          </div>
+    {{#if availableVenues}}
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title nm-section-title">Venue Availability</h3>
         </div>
-        <hr>
-      {{/each}}
-    </div>
+        <div class="panel-body">
+          <p>The following venues do not have any usual classes on <strong>{{venueDay}}</strong> from <strong>{{venueStartTime}}</strong> to <strong>{{venueEndTime}}</strong>:</p>
+          {{#each availableVenues}}
+            <hr>
+            <div class="row">
+              <div class="col-md-1">
+                <strong>{{this.letter}}</strong>
+              </div>
+              <div class="col-md-11">
+                {{#each this.venues}}
+                  <div class="nm-venue-availability-items">
+                    <a href="/venues/{{this}}">{{this}}</a>
+                  </div>
+                {{/each}}
+              </div>
+            </div>
+          {{/each}}
+        </div>
+      </div>
+    {{/if}}
   </div>
 </div>
