Made Bare Nusessities full width

--- a/app/scripts/nusessities/templates/nusessities.hbs
+++ b/app/scripts/nusessities/templates/nusessities.hbs
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <h1 class="nm-page-heading">Bare Nusessities</h1>
+  <div class="col-md-12">
+    <h1>Bare Nusessities</h1>
     <hr>
     <div class="row">
       <div class="col-md-8">
