--- a/app/scripts/preferences/templates/preferences.hbs
+++ b/app/scripts/preferences/templates/preferences.hbs
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-8 col-md-offset-2" id="preferences">
-    <h1 class="nm-page-heading">Preferences</h1>
+  <div class="col-md-6" id="preferences">
+    <h1>Preferences</h1>
     <hr>
     <form class="form-horizontal" role="form">
       <!-- <div class="form-group">
