--- a/app/scripts/collab/templates/collab_group_meeting_details.hbs
+++ b/app/scripts/collab/templates/collab_group_meeting_details.hbs
@@ -10,5 +10,6 @@
   <div class="col-md-5">
     <h5 class="highlight">Venue</h5>
     <h2 contenteditable class="nm-collab-meeting-details-venue">{{venue}}</h2>
+    <button class="btn btn-xs btn-warning show-venues" data-toggle="modal" data-target="#venues-modal">Select Venue</button>
   </div>
 </div>
