--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -53,7 +53,7 @@ $navmenu-width: 200px;
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/close";
 
 // Components w/ JavaScript
-//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/modals";
+@import "bootstrap-sass-official/assets/stylesheets/bootstrap/modals";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/tooltip";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/popovers";
 //@import "bootstrap-sass-official/assets/stylesheets/bootstrap/carousel";
