--- a/app/scripts/nusessities/templates/nusessities.hbs
+++ b/app/scripts/nusessities/templates/nusessities.hbs
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1>Bare Nusessities</h1>
+    <p>A project about the diversity of the people in NUS. The NUS Campus can be a friendlier place – one less stranger every day.</p>
     <hr>
     <div class="row">
       <div class="col-md-8">
