--- a/app/scripts/collab/templates/collab_group.hbs
+++ b/app/scripts/collab/templates/collab_group.hbs
@@ -68,7 +68,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">Select Venue</h4>
+        <h4 class="modal-title">Change Venue</h4>
       </div>
       <div class="modal-body nm-collab-venues-container"></div>
       <div class="modal-footer">
