--- a/app/scripts/friends/templates/friends_not_going_school.hbs
+++ b/app/scripts/friends/templates/friends_not_going_school.hbs
@@ -1,5 +1,5 @@
 {{#unless haveSchoolEveryday}}
-  <p>Note that the following people do have not lessons on the following days:</p>
+  <p>Note that the following people do not have lessons on the following days:</p>
   <ul>
     {{#each daysNotGoingToSchool}}
       {{#if peopleNotGoing}}
