Minor fixes for STePS

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -917,6 +917,13 @@ colgroup.hover {
   width: 100%;
 }
 
+[class*="nm-collab-meeting-details-"] {
+  cursor: pointer;
+  &:hover {
+    color: $brand-primary;
+  }
+}
+
 // Preferences
 #preferences {
   user-select: none;
