--- a/app/scripts/collab/templates/collab_group.hbs
+++ b/app/scripts/collab/templates/collab_group.hbs
@@ -11,7 +11,7 @@
               <div class="col-md-12">
                 <div class="panel panel-default">
                   <div class="panel-heading">
-                    <h3 class="panel-title">Next Meeting</h3>
+                    <h3 class="panel-title">Next Meeting Details</h3>
                   </div>
                   <div class="panel-body nm-collab-meeting-details">
                   </div>
