Removed pushState mode

--- a/app/scripts/timetable/templates/exam.hbs
+++ b/app/scripts/timetable/templates/exam.hbs
@@ -5,7 +5,7 @@
   <!--<a href="#" class="plain show-hide icon" title="Show/Hide">-->
     <!--<i class="fa fa-eye{{#unless display}}-slash{{/unless}} fa-lg"></i>-->
   <!--</a>-->
-  <a href="/modules/{{id}}" class="plain icon" title="Details">
+  <a href="/#modules/{{id}}" class="plain icon" title="Details">
     <i class="fa fa-info-circle fa-lg"></i>
   </a>
   <a href="#" class="plain remove icon" title="Remove">
