--- a/app/scripts/timetable/templates/shared_timetable_controls.hbs
+++ b/app/scripts/timetable/templates/shared_timetable_controls.hbs
@@ -2,6 +2,6 @@
   <strong>Shared timetable!</strong> You may make changes but they won't be
   saved. Do you want to restore your saved timetable or replace it with this
   shared timetable?
-  <a href="/timetable" data-bypass class="btn btn-success btn-sm restore">Restore</a>
+  <a href="/#timetable" data-bypass class="btn btn-success btn-sm restore">Restore</a>
   <button class="btn btn-danger btn-sm replace">Replace</button>
 </div>
