--- a/app/scripts/common/templates/bookmark_item.hbs
+++ b/app/scripts/common/templates/bookmark_item.hbs
@@ -1,1 +1,1 @@
-<a href="/modules/{{module}}">{{module}}</a> <i class="fa fa-times js-remove-bookmark"></i>
+<a href="/#modules/{{module}}">{{module}}</a> <i class="fa fa-times js-remove-bookmark"></i>
