--- a/app/scripts/modules/templates/module_item.hbs
+++ b/app/scripts/modules/templates/module_item.hbs
@@ -1,6 +1,6 @@
 <div class="panel-heading">
   <h2 class="panel-title nm-section-title">
-    <a href="/modules/{{ModuleCode}}">
+    <a href="/#modules/{{ModuleCode}}">
       {{ModuleCode}} {{ModuleTitle}}
     </a>
   </h2>
