Use table for friend list

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -937,28 +937,15 @@ colgroup.hover {
 }
 
 // Friends
-.nm-friends-list {
-  padding: 0;
-}
-
 .nm-friends-list-item {
-  border-top: 1px solid #ccc;
-  cursor: pointer;
-  margin-top: 0;
-  padding: 15px;
   &:first-child {
-    border-top: none;
-  }
-  &:hover {
-    background-color: #eee;
-    transition: background .3s linear;
-    .nm-friends-delete {
-      display: inherit;
+    .nm-friends-action {
+      display: none;
     }
   }
-  .nm-friends-delete {
-    display: none;
-    float: right;
+  .nm-friends-name {
+    cursor: pointer;
+    width: 100%;
   }
 }
 
