Added Save logic and fix popover issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -937,6 +937,10 @@ colgroup.hover {
 }
 
 // Friends
+.popover {
+  width: 100%;
+}
+
 .nm-friends-list-item {
   &:first-child {
     .nm-friends-action {
