--- a/app/scripts/barenus/templates/barenus.hbs
+++ b/app/scripts/barenus/templates/barenus.hbs
@@ -4,13 +4,13 @@
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-2">
-            <a class="nm-bn-logo" target="_blank" href="https://www.facebook.com/BareNUS">
-              <img class="img-rounded img-responsive" src="https://graph.facebook.com/BareNUS/picture?type=large" alt="BareNUS Profile Picture">
+            <a class="nm-bn-logo" target="_blank" href="https://www.facebook.com/nusdiscount">
+              <img class="img-rounded img-responsive" src="https://graph.facebook.com/nusdiscount/picture?type=large" alt="NUStyle Profile Picture">
             </a>
           </div>
           <div class="col-md-10">
-            <h1 class="media-heading"><a target="_blank" href="https://www.facebook.com/BareNUS">Bare Nusessities</a></h1>
-            <p>When studying gets boring, take a walk. Find someone and poke your nose into their business. What you get, will surprise you!<br>This project is about the diversity of the people in NUS. Peace.</p>
+            <h1 class="media-heading"><a target="_blank" href="https://www.facebook.com/nusdiscount">NUStyle</a></h1>
+            <p>NUStyle is an exclusive discount scheme for the NUS community. Just flash your matriculation/staff card to enjoy discounts at our partner stores!</p>
           </div>
         </div>
       </div>
